2022-10-10T01:53:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3216385327
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 205 381 / 218 401
* notice: next accum: outdated-unq outdated-all / unq all: 205 381 / 219 402
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-09]

2022-10-09T16:25:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214789602
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 204 379 / 218 400
* notice: next accum: outdated-unq outdated-all / unq all: 205 381 / 218 401
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-25] / []

2022-10-09T08:22:56Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3213460654
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 204 379 / 218 401
* notice: next accum: outdated-unq outdated-all / unq all: 204 379 / 218 400
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-25]

2022-10-09T01:47:36Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3212500449
* notice: last 14d: unq all: 3 22
* notice: prev accum: outdated-unq outdated-all / unq all: 204 379 / 217 400
* notice: next accum: outdated-unq outdated-all / unq all: 204 379 / 218 401
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-08]

2022-10-08T16:24:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3211042611