@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-27T01:49:59Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-10-10T08:29:41Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
