@@ -1,11 +1,11 @@
 {
-  "count": 21,
+  "count": 20,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-09-26T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2022-10-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
