@@ -1,3 +1,11 @@
+2022-10-10T08:29:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217885774
+* notice: last 14d: unq all: 3 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 205 381 / 219 402
+* notice: next accum: outdated-unq outdated-all / unq all: 205 381 / 219 401
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-26 2022-10-10]
+
 2022-10-10T01:53:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3216385327
 * notice: last 14d: unq all: 3 21
